// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block check empty php blocks 1`] = `
Program {
  "children": Array [
    Inline {
      "kind": "inline",
      "leadingComments": Array [
        CommentBlock {
          "kind": "commentblock",
          "offset": 8,
          "value": "/**
   * Comment header
   */",
        },
      ],
      "raw": "
SOME HTML OUTPUT
",
      "trailingComments": Array [
        CommentBlock {
          "kind": "commentblock",
          "offset": 64,
          "value": "/* Inner comment */",
        },
      ],
      "value": "SOME HTML OUTPUT
",
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 8,
      "value": "/**
   * Comment header
   */",
    },
    CommentBlock {
      "kind": "commentblock",
      "offset": 64,
      "value": "/* Inner comment */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`block check empty php file 1`] = `
Program {
  "children": Array [
    Noop {
      "kind": "noop",
      "leadingComments": Array [
        CommentBlock {
          "kind": "commentblock",
          "offset": 8,
          "value": "/**
   * Comment header
   */",
        },
      ],
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 8,
      "value": "/**
   * Comment header
   */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`block empty class block 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "foo",
        "trailingComments": Array [
          CommentBlock {
            "kind": "commentblock",
            "offset": 12,
            "value": "/* 1 */",
          },
        ],
      },
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 12,
      "value": "/* 1 */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`block empty declare block 1`] = `
Program {
  "children": Array [
    Declare {
      "children": Array [
        Noop {
          "kind": "noop",
          "leadingComments": Array [
            CommentBlock {
              "kind": "commentblock",
              "offset": 18,
              "value": "/* 1 */",
            },
          ],
        },
      ],
      "directives": Array [
        DeclareDirective {
          "key": Identifier {
            "kind": "identifier",
            "name": "tick",
          },
          "kind": "declaredirective",
          "value": Number {
            "kind": "number",
            "value": "1",
          },
        },
      ],
      "kind": "declare",
      "mode": "block",
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 18,
      "value": "/* 1 */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`block empty declare short form 1`] = `
Program {
  "children": Array [
    Declare {
      "children": Array [
        Noop {
          "kind": "noop",
          "leadingComments": Array [
            CommentBlock {
              "kind": "commentblock",
              "offset": 17,
              "value": "/* 1 */",
            },
          ],
        },
      ],
      "directives": Array [
        DeclareDirective {
          "key": Identifier {
            "kind": "identifier",
            "name": "tick",
          },
          "kind": "declaredirective",
          "value": Number {
            "kind": "number",
            "value": "1",
          },
        },
      ],
      "kind": "declare",
      "mode": "short",
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 17,
      "value": "/* 1 */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`block empty for 1`] = `
Program {
  "children": Array [
    For {
      "body": Block {
        "children": Array [
          Noop {
            "kind": "noop",
            "leadingComments": Array [
              CommentBlock {
                "kind": "commentblock",
                "offset": 10,
                "value": "/* foo */",
              },
            ],
          },
        ],
        "kind": "block",
      },
      "increment": Array [],
      "init": Array [],
      "kind": "for",
      "shortForm": false,
      "test": Array [],
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 10,
      "value": "/* foo */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`block empty for short form 1`] = `
Program {
  "children": Array [
    For {
      "body": Block {
        "children": Array [
          Noop {
            "kind": "noop",
            "leadingComments": Array [
              CommentBlock {
                "kind": "commentblock",
                "offset": 10,
                "value": "/* foo */",
              },
            ],
          },
        ],
        "kind": "block",
      },
      "increment": Array [],
      "init": Array [],
      "kind": "for",
      "shortForm": true,
      "test": Array [],
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 10,
      "value": "/* foo */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`block empty foreach 1`] = `
Program {
  "children": Array [
    Foreach {
      "body": Block {
        "children": Array [
          Noop {
            "kind": "noop",
            "leadingComments": Array [
              CommentBlock {
                "kind": "commentblock",
                "offset": 24,
                "value": "/* foo */",
              },
            ],
          },
        ],
        "kind": "block",
      },
      "key": null,
      "kind": "foreach",
      "shortForm": false,
      "source": Variable {
        "curly": false,
        "kind": "variable",
        "name": "foo",
      },
      "value": Variable {
        "curly": false,
        "kind": "variable",
        "name": "bar",
      },
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 24,
      "value": "/* foo */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`block empty foreach short form 1`] = `
Program {
  "children": Array [
    Foreach {
      "body": Block {
        "children": Array [
          Noop {
            "kind": "noop",
            "leadingComments": Array [
              CommentBlock {
                "kind": "commentblock",
                "offset": 23,
                "value": "/* foo */",
              },
            ],
          },
        ],
        "kind": "block",
      },
      "key": null,
      "kind": "foreach",
      "shortForm": true,
      "source": Variable {
        "curly": false,
        "kind": "variable",
        "name": "foo",
      },
      "value": Variable {
        "curly": false,
        "kind": "variable",
        "name": "bar",
      },
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 23,
      "value": "/* foo */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`block empty function block 1`] = `
Program {
  "children": Array [
    _Function {
      "arguments": Array [],
      "body": Block {
        "children": Array [
          Noop {
            "kind": "noop",
            "leadingComments": Array [
              CommentBlock {
                "kind": "commentblock",
                "offset": 17,
                "value": "/* 1 */",
              },
            ],
          },
        ],
        "kind": "block",
      },
      "byref": false,
      "kind": "function",
      "name": Identifier {
        "kind": "identifier",
        "name": "foo",
      },
      "nullable": false,
      "type": null,
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 17,
      "value": "/* 1 */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`block empty if #2 short form 1`] = `
Program {
  "children": Array [
    If {
      "alternate": null,
      "body": Block {
        "children": Array [
          ExpressionStatement {
            "expression": Variable {
              "curly": false,
              "kind": "variable",
              "name": "a",
            },
            "kind": "expressionstatement",
          },
        ],
        "kind": "block",
        "leadingComments": Array [
          CommentBlock {
            "kind": "commentblock",
            "offset": 10,
            "value": "/* pre */",
          },
        ],
        "trailingComments": Array [
          CommentBlock {
            "kind": "commentblock",
            "offset": 24,
            "value": "/* inner */",
          },
        ],
      },
      "kind": "if",
      "shortForm": true,
      "test": Variable {
        "curly": false,
        "kind": "variable",
        "name": "foo",
      },
      "trailingComments": Array [
        CommentBlock {
          "kind": "commentblock",
          "offset": 43,
          "value": "/* out */",
        },
      ],
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 10,
      "value": "/* pre */",
    },
    CommentBlock {
      "kind": "commentblock",
      "offset": 24,
      "value": "/* inner */",
    },
    CommentBlock {
      "kind": "commentblock",
      "offset": 43,
      "value": "/* out */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`block empty if #3 short form 1`] = `
Program {
  "children": Array [
    If {
      "alternate": If {
        "alternate": Block {
          "children": Array [],
          "kind": "block",
          "leadingComments": Array [
            CommentBlock {
              "kind": "commentblock",
              "offset": 50,
              "value": "/* bar */",
            },
          ],
        },
        "body": Block {
          "children": Array [],
          "kind": "block",
          "leadingComments": Array [
            CommentBlock {
              "kind": "commentblock",
              "offset": 34,
              "value": "/* baz */",
            },
          ],
        },
        "kind": "if",
        "shortForm": true,
        "test": Variable {
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
      },
      "body": Block {
        "children": Array [],
        "kind": "block",
        "leadingComments": Array [
          CommentBlock {
            "kind": "commentblock",
            "offset": 10,
            "value": "/* foo */",
          },
        ],
      },
      "kind": "if",
      "shortForm": true,
      "test": Variable {
        "curly": false,
        "kind": "variable",
        "name": "foo",
      },
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 10,
      "value": "/* foo */",
    },
    CommentBlock {
      "kind": "commentblock",
      "offset": 34,
      "value": "/* baz */",
    },
    CommentBlock {
      "kind": "commentblock",
      "offset": 50,
      "value": "/* bar */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`block empty if 1`] = `
Program {
  "children": Array [
    If {
      "alternate": null,
      "body": Block {
        "children": Array [
          Noop {
            "kind": "noop",
            "leadingComments": Array [
              CommentBlock {
                "kind": "commentblock",
                "offset": 11,
                "value": "/* foo */",
              },
            ],
          },
        ],
        "kind": "block",
      },
      "kind": "if",
      "shortForm": false,
      "test": Variable {
        "curly": false,
        "kind": "variable",
        "name": "foo",
      },
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 11,
      "value": "/* foo */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`block empty if short form 1`] = `
Program {
  "children": Array [
    If {
      "alternate": null,
      "body": Block {
        "children": Array [],
        "kind": "block",
        "leadingComments": Array [
          CommentBlock {
            "kind": "commentblock",
            "offset": 10,
            "value": "/* foo */",
          },
        ],
      },
      "kind": "if",
      "shortForm": true,
      "test": Variable {
        "curly": false,
        "kind": "variable",
        "name": "foo",
      },
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 10,
      "value": "/* foo */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`block empty method block 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        Method {
          "arguments": Array [],
          "body": Block {
            "children": Array [
              Noop {
                "kind": "noop",
                "leadingComments": Array [
                  CommentBlock {
                    "kind": "commentblock",
                    "offset": 30,
                    "value": "/* 1 */",
                  },
                ],
              },
            ],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "bar",
          },
          "nullable": false,
          "type": null,
          "visibility": "",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "foo",
      },
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 30,
      "value": "/* 1 */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`block empty namespace block 1`] = `
Program {
  "children": Array [
    Namespace {
      "children": Array [
        Noop {
          "kind": "noop",
          "leadingComments": Array [
            CommentBlock {
              "kind": "commentblock",
              "offset": 16,
              "value": "/* 1 */",
            },
          ],
        },
      ],
      "kind": "namespace",
      "name": "foo",
      "withBrackets": true,
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 16,
      "value": "/* 1 */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`block empty statement 1`] = `
Program {
  "children": Array [],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 0,
      "value": "/* 1 */",
    },
    CommentBlock {
      "kind": "commentblock",
      "offset": 9,
      "value": "/* 2 */",
    },
    CommentBlock {
      "kind": "commentblock",
      "offset": 20,
      "value": "/* 3 */",
    },
  ],
  "errors": Array [],
  "kind": "program",
  "trailingComments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 0,
      "value": "/* 1 */",
    },
    CommentBlock {
      "kind": "commentblock",
      "offset": 9,
      "value": "/* 2 */",
    },
    CommentBlock {
      "kind": "commentblock",
      "offset": 20,
      "value": "/* 3 */",
    },
  ],
}
`;

exports[`block empty switch 1`] = `
Program {
  "children": Array [
    Switch {
      "body": Block {
        "children": Array [
          Noop {
            "kind": "noop",
            "leadingComments": Array [
              CommentBlock {
                "kind": "commentblock",
                "offset": 15,
                "value": "/* foo */",
              },
            ],
          },
        ],
        "kind": "block",
      },
      "kind": "switch",
      "shortForm": false,
      "test": Variable {
        "curly": false,
        "kind": "variable",
        "name": "foo",
      },
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 15,
      "value": "/* foo */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`block empty switch case short form 1`] = `
Program {
  "children": Array [
    Switch {
      "body": Block {
        "children": Array [
          Case {
            "body": Block {
              "children": Array [],
              "kind": "block",
              "leadingComments": Array [
                CommentBlock {
                  "kind": "commentblock",
                  "offset": 22,
                  "value": "/* foo */",
                },
              ],
            },
            "kind": "case",
            "test": Number {
              "kind": "number",
              "value": "1",
            },
          },
        ],
        "kind": "block",
      },
      "kind": "switch",
      "shortForm": true,
      "test": Variable {
        "curly": false,
        "kind": "variable",
        "name": "foo",
      },
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 22,
      "value": "/* foo */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`block empty switch short form 1`] = `
Program {
  "children": Array [
    Switch {
      "body": Block {
        "children": Array [
          Noop {
            "kind": "noop",
            "leadingComments": Array [
              CommentBlock {
                "kind": "commentblock",
                "offset": 14,
                "value": "/* foo */",
              },
            ],
          },
        ],
        "kind": "block",
      },
      "kind": "switch",
      "shortForm": true,
      "test": Variable {
        "curly": false,
        "kind": "variable",
        "name": "foo",
      },
    },
  ],
  "comments": Array [
    CommentBlock {
      "kind": "commentblock",
      "offset": 14,
      "value": "/* foo */",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`block single 1`] = `
Program {
  "children": Array [
    Block {
      "children": Array [
        ExpressionStatement {
          "expression": Assign {
            "kind": "assign",
            "left": Variable {
              "curly": false,
              "kind": "variable",
              "name": "var",
            },
            "operator": "=",
            "right": Number {
              "kind": "number",
              "value": "1",
            },
          },
          "kind": "expressionstatement",
        },
      ],
      "kind": "block",
    },
  ],
  "comments": Array [],
  "errors": Array [],
  "kind": "program",
}
`;
